--- a/src/CypherSheet.Client/Components/Views/StatsView.razor
+++ b/src/CypherSheet.Client/Components/Views/StatsView.razor
@@ -28,18 +28,56 @@ else
         
         <MudCard Elevation="3" Class="pa-2">
             <MudCardContent>
-                <MudText Typo="Typo.h6">Recovery</MudText>
-                <MudStack Row="true" Justify="Justify.SpaceBetween">
-                    <MudCheckBox T="bool" Value="@Character.Recovery.OneActionUsed" ValueChanged="@((v) => UpdateRecovery(v, 1))" Label="1 Action" Dense="true" Color="Color.Success" />
-                    <MudCheckBox T="bool" Value="@Character.Recovery.TenMinutesUsed" ValueChanged="@((v) => UpdateRecovery(v, 2))" Label="10 Mins" Dense="true" Color="Color.Success" />
-                </MudStack>
-                <MudStack Row="true" Justify="Justify.SpaceBetween">
-                     <MudCheckBox T="bool" Value="@Character.Recovery.OneHourUsed" ValueChanged="@((v) => UpdateRecovery(v, 3))" Label="1 Hour" Dense="true" Color="Color.Success" />
-                     <MudCheckBox T="bool" Value="@Character.Recovery.TenHoursUsed" ValueChanged="@((v) => UpdateRecovery(v, 4))" Label="10 Hours" Dense="true" Color="Color.Success" />
-                </MudStack>
-                 <MudButton Variant="Variant.Outlined" FullWidth="true" OnClick="ResetRecovery" Class="mt-2">Reset Recovery</MudButton>
+                <MudText Typo="Typo.h6" Class="mb-3">Recovery</MudText>
+                
+                <!-- Recovery Checkboxes in Grid Layout -->
+                <MudGrid Spacing="2">
+                    <MudItem xs="6">
+                        <MudCheckBox T="bool" 
+                                   Value="@Character.Recovery.OneActionUsed" 
+                                   ValueChanged="@((v) => OpenRecoveryDialog(v, "1 Action"))" 
+                                   Label="1 Action" 
+                                   Dense="true" 
+                                   Color="Color.Success" />
+                    </MudItem>
+                    <MudItem xs="6">
+                        <MudCheckBox T="bool" 
+                                   Value="@Character.Recovery.TenMinutesUsed" 
+                                   ValueChanged="@((v) => OpenRecoveryDialog(v, "10 Mins"))" 
+                                   Label="10 Mins" 
+                                   Dense="true" 
+                                   Color="Color.Success" />
+                    </MudItem>
+                    <MudItem xs="6">
+                        <MudCheckBox T="bool" 
+                                   Value="@Character.Recovery.OneHourUsed" 
+                                   ValueChanged="@((v) => OpenRecoveryDialog(v, "1 Hour"))" 
+                                   Label="1 Hour" 
+                                   Dense="true" 
+                                   Color="Color.Success" />
+                    </MudItem>
+                    <MudItem xs="6">
+                        <MudCheckBox T="bool" 
+                                   Value="@Character.Recovery.TenHoursUsed" 
+                                   ValueChanged="@((v) => OpenRecoveryDialog(v, "10 Hours"))" 
+                                   Label="10 Hours" 
+                                   Dense="true" 
+                                   Color="Color.Success" />
+                    </MudItem>
+                </MudGrid>
+                
+                <!-- Custom Roll Bonus Field -->
+                <MudNumericField @bind-Value="Character.Recovery.CustomRollBonus" 
+                               Label="1D6 +" 
+                               Variant="Variant.Outlined" 
+                               Min="0" 
+                               T="int" 
+                               OnBlur="SaveCharacter" 
+                               HelperText="Bônus customizado para recuperação"
+                               Class="mt-3" />
             </MudCardContent>
         </MudCard>
+
 
         <MudCard Elevation="3" Class="pa-2">
             <MudCardContent>
@@ -103,23 +141,46 @@ else
         await OnSave.InvokeAsync();
     }
     
-    private async Task UpdateRecovery(bool value, int type)
+    
+    private async Task OpenRecoveryDialog(bool value, string recoveryType)
     {
-        switch (type)
+        // If unchecking, just toggle it off
+        if (!value)
         {
-            case 1: Character.Recovery.OneActionUsed = value; break;
-            case 2: Character.Recovery.TenMinutesUsed = value; break;
-            case 3: Character.Recovery.OneHourUsed = value; break;
-            case 4: Character.Recovery.TenHoursUsed = value; break;
+            switch (recoveryType)
+            {
+                case "1 Action": Character.Recovery.OneActionUsed = false; break;
+                case "10 Mins": Character.Recovery.TenMinutesUsed = false; break;
+                case "1 Hour": Character.Recovery.OneHourUsed = false; break;
+                case "10 Hours": Character.Recovery.TenHoursUsed = false; break;
+            }
+            await SaveCharacter();
+            return;
         }
-        await SaveCharacter();
+
+        // If checking, open the recovery dialog
+        var parameters = new DialogParameters 
+        { 
+            ["Character"] = Character,
+            ["RecoveryType"] = recoveryType
+        };
+        var options = new DialogOptions { CloseOnEscapeKey = true, MaxWidth = MaxWidth.Small, FullWidth = true };
+        
+        var dialog = DialogService.Show<RecoveryDialog>("Recovery", parameters, options);
+        var result = await dialog.Result;
+
+        if (!result.Canceled)
+        {
+            await SaveCharacter();
+        }
+        else
+        {
+            // If dialog was canceled, don't mark as used
+            StateHasChanged();
+        }
     }
     
-    private async Task ResetRecovery()
-    {
-        Character.Recovery.Reset();
-        await SaveCharacter();
-    }
+    
     
     private async Task UpdateDamageTrack(bool value, bool isImpaired)
     {
