--- a/src/CypherSheet.Client/_Imports.razor
+++ b/src/CypherSheet.Client/_Imports.razor
@@ -12,3 +12,4 @@
 @using CypherSheet.Domain
 @using CypherSheet.Storage
 @using CypherSheet.Client.Components
+@using CypherSheet.Client.Components.Dialogs
