--- a/src/CypherSheet.Client/Components/Views/NotesView.razor
+++ b/src/CypherSheet.Client/Components/Views/NotesView.razor
@@ -6,27 +6,36 @@
 <MudStack Spacing="2">
     <MudButton StartIcon="@Icons.Material.Filled.Add" Variant="Variant.Filled" Color="Color.Primary" OnClick="AddNote">Adicionar Nota</MudButton>
     
-    <MudGrid>
-        @foreach (var note in Character.Notes)
-        {
-            <MudItem xs="12" sm="6" md="4">
-                <MudCard Elevation="2">
-                    <MudCardHeader>
-                        <CardHeaderContent>
-                            <MudText Typo="Typo.h6">@note.Title</MudText>
-                        </CardHeaderContent>
-                        <CardHeaderActions>
-                             <MudIconButton Icon="@Icons.Material.Filled.Edit" Color="Color.Primary" OnClick="@(() => EditNote(note))" />
-                             <MudIconButton Icon="@Icons.Material.Filled.Delete" Color="Color.Error" OnClick="@(() => RemoveNote(note))" />
-                        </CardHeaderActions>
-                    </MudCardHeader>
-                    <MudCardContent>
-                        <MudText Typo="Typo.body2" Style="white-space: pre-wrap;">@note.Content</MudText>
-                    </MudCardContent>
-                </MudCard>
-            </MudItem>
-        }
-    </MudGrid>
+    @if (!Character.Notes.Any())
+    {
+        <div style="position: relative; min-height: 300px;">
+            <EmptyStateWatermark Icon="@Icons.Material.Filled.EditNote" />
+        </div>
+    }
+    else
+    {
+        <MudGrid>
+            @foreach (var note in Character.Notes)
+            {
+                <MudItem xs="12" sm="6" md="4">
+                    <MudCard Elevation="2">
+                        <MudCardHeader>
+                            <CardHeaderContent>
+                                <MudText Typo="Typo.h6">@note.Title</MudText>
+                            </CardHeaderContent>
+                            <CardHeaderActions>
+                                 <MudIconButton Icon="@Icons.Material.Filled.Edit" Color="Color.Primary" OnClick="@(() => EditNote(note))" />
+                                 <MudIconButton Icon="@Icons.Material.Filled.Delete" Color="Color.Error" OnClick="@(() => RemoveNote(note))" />
+                            </CardHeaderActions>
+                        </MudCardHeader>
+                        <MudCardContent>
+                            <MudText Typo="Typo.body2" Style="white-space: pre-wrap;">@note.Content</MudText>
+                        </MudCardContent>
+                    </MudCard>
+                </MudItem>
+            }
+        </MudGrid>
+    }
 </MudStack>
 
 @code {
