--- a/src/CypherSheet.Client/Components/Views/EquipmentView.razor
+++ b/src/CypherSheet.Client/Components/Views/EquipmentView.razor
@@ -8,7 +8,10 @@
     
     @if (!Character.Equipment.Any())
     {
-        <MudText Typo="Typo.body2" Class="pa-4">Mochila varia.</MudText>
+        <div style="position: relative; min-height: 300px;">
+            <EmptyStateWatermark Icon="@Icons.Material.Filled.Backpack" />
+            <MudText Typo="Typo.body2" Class="pa-4" style="position: relative; z-index: 1;">Mochila vazia.</MudText>
+        </div>
     }
     else
     {
