--- a/src/CypherSheet.Client/Components/Views/SkillsView.razor
+++ b/src/CypherSheet.Client/Components/Views/SkillsView.razor
@@ -9,7 +9,10 @@
     
     @if (!Character.Skills.Any())
     {
-        <MudText Typo="Typo.body2" Class="pa-4">Nenhuma perícia adicionada.</MudText>
+        <div style="position: relative; min-height: 300px;">
+            <EmptyStateWatermark Icon="@Icons.Material.Filled.SportsMma" />
+            <MudText Typo="Typo.body2" Class="pa-4" style="position: relative; z-index: 1;">Nenhuma perícia adicionada.</MudText>
+        </div>
     }
     else
     {
