--- a/src/CypherSheet.Client/Components/Views/CharacterListView.razor
+++ b/src/CypherSheet.Client/Components/Views/CharacterListView.razor
@@ -26,7 +26,7 @@
         else
         {
             <MudGrid>
-                @foreach (var character in characters)
+                @foreach (var character in characters.OrderBy(c => c.Name))
                 {
                     <MudItem xs="12" sm="6" md="4">
                         <MudCard Elevation="3" Class="cursor-pointer hover-card" @onclick="() => OpenCharacter(character.Id)">
